use dev tools to review alignment of text and images side by side in the places page whichdon't line up in tablet and desktop size. increase media query margin-bottom to 10% to line up correctly.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,7 +403,7 @@ th, td {
     .left {
         float: left;
         width: 33%;
-        margin-bottom: 7%;
+        margin-bottom: 10%;
         clear: left;
     }
 
@@ -464,7 +464,7 @@ th, td {
 
     .left {
         float: left;
-        margin-bottom: 5%;
+        margin-bottom: 10%;
     }
 
     .right {
